bases/gatekeeper/constraints/Capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: team-1-capabilities
  labels:
    type: gatekeeper-constraint
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: [ PLACEHOLDER ]
  parameters:
    allowedCapabilities: [ "NET_ADMIN" ]
    requiredDropCapabilities: [ "MKNOD", "SETGID", "SETUID" ]
