bases/gatekeeper/constraints/ReadOnlyRootFilesystem.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPReadOnlyRootFilesystem
metadata:
  name: team-1-readonlyrootfilesystem
  labels:
    type: gatekeeper-constraint
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: [ PLACEHOLDER ]
