bases/gatekeeper/constraints/gatekeeper-test.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPReadOnlyRootFilesystem
metadata:
  name: team-1-readonlyrootfilesystem
  labels:
    type: gatekeeper-constraint
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - default
      - iscp-defender
      - istio-system
  parameters:
    nsLabel: restricted
---
